# Snek

./: Snek.sln  SnekV2.sln
Debug/: Snek.ilk  SnekV2.ilk
SDL/VisualC/: SDL.sln
SDL/VisualC/SDL/: SDL.vcxproj
SDL/VisualC/SDLtest/: SDLtest.vcxproj
SDL/include/: SDL_config_windows.h
Snek/: Snek.vcxproj  Snek.vcxproj.filters  cell.cpp  cell.h  grid.cc  grid.h  gridState.h  main.cpp
Snek/Debug/: vc120.idb
Snek/Debug/Snek.tlog/: CL.read.1.tlog  CL.write.1.tlog  Snek.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Snek/Release/Snek.tlog/: Snek.lastbuildstate  cl.command.1.tlog  cl.read.1.tlog  cl.write.1.tlog  link.command.1.tlog  link.read.1.tlog  (+1 more)
Snek/proj.android/: AndroidManifest.xml  build-run.bat  build-run.sh
Snek/proj.cmake/: CMakeLists.txt  data.js  run.sh
Snek/proj.cmake/build_emsc/: CMakeCache.txt  Makefile  cmake_install.cmake
Snek/proj.cmake/build_emsc/oxygine-framework/: Makefile  cmake_install.cmake
Snek/proj.cmake/build_emsc_release/: CMakeCache.txt  Makefile  cmake_install.cmake
Snek/proj.cmake/build_emsc_release/oxygine-framework/: Makefile  cmake_install.cmake
Snek/proj.win32/: test.sln  test.vcxproj  test.vcxproj.filters
Snek/src/: cell.cpp  cell.h  example.cpp  gdisplay.cpp  gdisplay.h  grid.cpp  grid.h  gridstates.h  info.h  main.cpp  observer.h  snake.cpp  snake.h  subject.cpp  subject.h
SnekV2/: ReadMe.txt  SnekV2.cpp  SnekV2.vcxproj  SnekV2.vcxproj.filters  cell.cpp  cell.h  grid.cpp  grid.h  gridstates.h  snake.cpp  snake.h  stdafx.cpp
SnekV2/Debug/: vc120.idb
(+61 files in other folders)
